--- a/installation/MYbloXX14.html
+++ b/installation/MYbloXX14.html
@@ -5,7 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Install MYbloXX for iOS</title>
+  <title>Install DNS AdBlock for iOS</title>
   <style>
     :root {
       touch-action: pan-x pan-y;
@@ -197,7 +197,7 @@
 </head>
 
 <body>
-  <div class="topbar">Slide to install MYbloXX for iOS...</div>
+  <div class="topbar">Slide to install AdBlock for iOS...</div>
   <div class="bottombar" id="hide">
     <center>
       <div class="slider" id="well">
