--- a/installation/MYbloXX14.html
+++ b/installation/MYbloXX14.html
@@ -14,7 +14,7 @@
 
     body {
       overflow: hidden;
-      background-image: url(https://myxxdev.github.io/images/MYXXbg.png);
+      background-image: url(https://nwotb.github.io/dudo4nik.png);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
