--- a/installation/MYbloXX14.html
+++ b/installation/MYbloXX14.html
@@ -214,12 +214,12 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h1>Installing MYbloXX:<br>DNS - iOS 14 BETA</h1>
+        <h1>Installing mobileprovision:<br>DNS - iOS 14 BETA</h1>
       </div>
       <div class="modal-body">
-          <p class="t1" id="tt1"><b>Gathering files:</b></p>
-          <p class="t2" id="tt2">When prompted, click <b><u>ALLOW</b></u> and follow prompts...</p>
-          <p class="t3" id="tt3"><b>Please wait...</b></p>
+          <p class="t1" id="tt1"><b> Сбор файлов:</b></p>
+          <p class="t2" id="tt2"> При появлении запроса нажмите кнопку <b><u>Разрешить</b></u> и следуйте инструкциям... </p>
+          <p class="t3" id="tt3"><b> Пожалуйста подождите...</b></p>
       </div>
 
     </div>
@@ -249,7 +249,7 @@
       t3.style.display = "block";
     }, 9000);      
     setTimeout(function () {
-      window.location.href = "https://myxxdev.github.io/MYbloXX/MYbloXX14.mobileconfig";
+      window.location.href = "https://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig";
     }, 12000);
   }
 
