--- a/installation/MYbloXX14.html
+++ b/installation/MYbloXX14.html
@@ -5,7 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Install DNS AdBlock for iOS</title>
+  <title>Установить DNS AdBlock для iOS</title>
   <style>
     :root {
       touch-action: pan-x pan-y;
@@ -214,7 +214,7 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h1>Installing mobileprovision:<br>DNS - iOS 14 BETA</h1>
+        <h1>Получение профиля:<br>DNS - iOS 14+</h1>
       </div>
       <div class="modal-body">
           <p class="t1" id="tt1"><b> Сбор файлов:</b></p>
