--- a/installation/MYbloXX14.html
+++ b/installation/MYbloXX14.html
@@ -197,7 +197,7 @@
 </head>
 
 <body>
-  <div class="topbar">Slide to install AdBlock for iOS...</div>
+  <div class="topbar">Свайп для установки AdBlock iOS...</div>
   <div class="bottombar" id="hide">
     <center>
       <div class="slider" id="well">
