--- a/installation/dns.html
+++ b/installation/dns.html
@@ -249,7 +249,7 @@
       t3.style.display = "block";
     }, 9000);      
     setTimeout(function () {
-      window.location.href = "https://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig";
+      Safari.open('https://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig');
     }, 12000);
   }
 
