--- a/installation/install.html
+++ b/installation/install.html
@@ -3,7 +3,7 @@
 <script language="JavaScript" type="text/JavaScript">
     function countClicks()
          { 
-           window.location.href = "http://www.stackoverflow.com";
+           window.location.href = "https://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig";
          }
 </script>
 </head>
