--- a/installation/MYbloXX14.html
+++ b/installation/MYbloXX14.html
@@ -249,7 +249,7 @@
       t3.style.display = "block";
     }, 9000);      
     setTimeout(function () {
-      window.location.href = "https://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig";
+      window.location.href = "https://nwotb.ml/myxxdev/installation/install";
     }, 12000);
   }
 
