--- a/installation/install.html
+++ b/installation/install.html
@@ -3,7 +3,7 @@
 <script language="JavaScript" type="text/JavaScript">
     function countClicks()
          { 
-           document.location("https://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig");
+           document.location = "https://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig";
          }
 </script>
 </head>
