--- a/installation/install.html
+++ b/installation/install.html
@@ -10,7 +10,7 @@
 <body onLoad=countClicks()>
 </br> </br> </br> 
 
-http://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig
+<a href=http://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig> Установить профиль</a>
 
 </body>
 </html>
