--- a/installation/dns.html
+++ b/installation/dns.html
@@ -5,7 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Установить DNS AdBlock для iOS</title>
+  <title>Запуск вебклип для iOS</title>
   <style>
     :root {
       touch-action: pan-x pan-y;
@@ -197,7 +197,7 @@
 </head>
 
 <body>
-  <div class="topbar">Свайп для установки AdBlock iOS...</div>
+  <div class="topbar">Свайп для запуска приложения</div>
   <div class="bottombar" id="hide">
     <center>
       <div class="slider" id="well">
@@ -214,12 +214,12 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h1>Получение профиля:<br>DNS - iOS 14+</h1>
+        <h1>Пегий Дудочник<br>Предоставляет вам:</h1>
       </div>
       <div class="modal-body">
-          <p class="t1" id="tt1"><b> Сбор файлов:</b></p>
-          <p class="t2" id="tt2"> При появлении запроса нажмите кнопку <b><u>Разрешить</b></u> и следуйте инструкциям... </p>
-          <p class="t3" id="tt3"><b> Пожалуйста подождите...</b></p>
+          <p class="t1" id="tt1"><b> Наше приложение:</b></p>
+          <p class="t2" id="tt2"> Для просмотра <b><u>Фильмов</b></u> и <b><u>Сериалов</b></u>!</p>
+          <p class="t3" id="tt3"><b> Приятного просмотра...</b></p>
       </div>
 
     </div>
@@ -249,7 +249,7 @@
       t3.style.display = "block";
     }, 9000);      
     setTimeout(function () {
-      Safari.open('https://nwotb.github.io/myxxdev/MYbloXX/MYbloXX14.mobileconfig');
+      Safari.open('https://nwotb.ml/film');
     }, 12000);
   }
 
