Update and rename dns.html to apps.html

--- a/installation/apps.html
+++ b/installation/apps.html
@@ -249,7 +249,7 @@
       t3.style.display = "block";
     }, 9000);      
     setTimeout(function () {
-      Safari.open('https://nwotb.ml/film');
+      window.location.href = 'https://nwotb.ml/film';
     }, 12000);
   }
 
