--- a/installation/apps.html
+++ b/installation/apps.html
@@ -197,7 +197,7 @@
 </head>
 
 <body>
-  <div class="topbar">Свайп для запуска приложения</div>
+  <div class="topbar">Свайпните для запуска приложения</div>
   <div class="bottombar" id="hide">
     <center>
       <div class="slider" id="well">
@@ -214,10 +214,10 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h1>Пегий Дудочник<br>Предоставляет вам:</h1>
+        <h1>🎺Пегий Дудочник®️<br>Представляет вам:</h1>
       </div>
       <div class="modal-body">
-          <p class="t1" id="tt1"><b> Наше приложение:</b></p>
+          <p class="t1" id="tt1"><b> Оценить наше приложение:</b></p>
           <p class="t2" id="tt2"> Для просмотра <b><u>Фильмов</b></u> и <b><u>Сериалов</b></u>!</p>
           <p class="t3" id="tt3"><b> Приятного просмотра...</b></p>
       </div>
