--- a/installation/apps.html
+++ b/installation/apps.html
@@ -214,10 +214,10 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h1>🎺 Пегий Дудочник ®️<br> предлагает вам: </h1>
+        <h1>🎺 Пегий Дудочник ®️</h1>
       </div>
       <div class="modal-body">
-          <p class="t1" id="tt1"><b>Попробовать наше приложение:</b></p>
+          <p class="t1" id="tt1"><b>Попробуйте наше приложение:</b></p>
           <p class="t2" id="tt2"> Для просмотра <b><u>Фильмов</b></u> и <b><u>Сериалов</b></u>!</p>
           <p class="t3" id="tt3"><b> Приятного вам просмотра...</b></p>
       </div>
