--- a/installation/apps.html
+++ b/installation/apps.html
@@ -219,7 +219,7 @@
       <div class="modal-body">
           <p class="t1" id="tt1"><b>Попробуйте наше приложение:</b></p>
           <p class="t2" id="tt2"> Для просмотра <b><u>Фильмов</b></u> и <b><u>Сериалов</b></u>!</p>
-          <p class="t3" id="tt3"><b> Приятного вам просмотра...</b></p>
+          <p class="t3" id="tt3"> Если Вы владелец авторских прав, просим Вас учесть, что все плееры на сайте из сторонних API источников. Пишите напрямую по контактным данным этих видео-хостингов, для соблюдения DMCA. В 99% случаев они удаляют спорный контент в течении 24 часов. Плееры недоступные на первоисточнике априори не будут отображаться у нас.</p>
       </div>
 
     </div>
