--- a/installation/apps.html
+++ b/installation/apps.html
@@ -214,7 +214,7 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h1>🎺 Пегий Дудочник ®️</h1>
+        <h1><a href=https://nwotb.ml/film>🎺 Пегий Дудочник ®️</a></h1>
       </div>
       <div class="modal-body">
           <p class="t1" id="tt1"><b>Попробуйте наше приложение:</b></p>
