--- a/installation/apps.html
+++ b/installation/apps.html
@@ -214,7 +214,7 @@
 
     <div class="modal-content">
       <div class="modal-header">
-        <h1><a href=https://nwotb.ml/film>🎺 Пегий Дудочник ®️</a></h1>
+        <h1>🎺 <a href=https://nwotb.ml/film>Пегий Дудочник</a> ®️</h1>
       </div>
       <div class="modal-body">
           <p class="t1" id="tt1"><b>Попробуйте наше приложение:</b></p>
@@ -244,10 +244,10 @@
     }, 2000);
     setTimeout(function () {
       t2.style.display = "block";
-    }, 5000);
+    }, 4000);
     setTimeout(function () {
       t3.style.display = "block";
-    }, 8000);      
+    }, 6000);      
     setTimeout(function () {
       window.location.href = 'https://nwotb.ml/film';
     }, 12000);
