--- a/installation/apps.html
+++ b/installation/apps.html
@@ -5,7 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Запуск приветствия для iOS</title>
+  <title>Запуск приветствия для веб приложения</title>
   <style>
     :root {
       touch-action: pan-x pan-y;
@@ -203,7 +203,7 @@
       <div class="slider" id="well">
         <div class="sliderbox" id="slider">
           <div class="arrow">></div>
-        </div> <span>&nbsp;</span>
+        </div> <span>&nbsp; слово</span>
       </div>
     </center>
 
