--- a/installation/apps.html
+++ b/installation/apps.html
@@ -217,7 +217,7 @@
         <h1>🎺 <a href=https://nwotb.ml/film>Пегий Дудочник</a> ®️</h1>
       </div>
       <div class="modal-body">
-          <p class="t1" id="tt1"><b>Попробуйте наше приложение:</b></p>
+          <p class="t1" id="tt1"><a href=https://telegra.ph/Pegij-Dudochnik-12-27><b>Попробуйте наше приложение:</b></a></p>
           <p class="t2" id="tt2"> Для просмотра <b><u>Фильмов</b></u> и <b><u>Сериалов</b></u>!</p>
           <p class="t3" id="tt3"> Если Вы владелец авторских прав, просим Вас учесть, что все плееры на сайте из сторонних API источников. Пишите напрямую по контактным данным этих видео-хостингов, для соблюдения DMCA. В 99% случаев они удаляют спорный контент в течении 24 часов. Плееры недоступные на первоисточнике априори не будут отображаться у нас. </br> </br> Можете оказать финансовую поддержку наших ресурсов, если имеется желание видеть наш сервис работающим и процветающим. </br>  </br> С любовью ❤️‍🔥 Пегий Дудочник... </p>
       </div>
