--- a/installation/apps.html
+++ b/installation/apps.html
@@ -203,7 +203,7 @@
       <div class="slider" id="well">
         <div class="sliderbox" id="slider">
           <div class="arrow">></div>
-        </div> <span>&nbsp; слово</span>
+        </div> <span>&nbsp; Slide to unlock </span>
       </div>
     </center>
 
