--- a/installation/apps.html
+++ b/installation/apps.html
@@ -197,7 +197,7 @@
 </head>
 
 <body>
-  <div class="topbar">Свайпните для запуска приложения</div>
+  <div class="topbar"> С ❤️‍🔥 Пегий Дудочник </div>
   <div class="bottombar" id="hide">
     <center>
       <div class="slider" id="well">
