--- a/installation/apps.html
+++ b/installation/apps.html
@@ -197,13 +197,13 @@
 </head>
 
 <body>
-  <div class="topbar"> С ❤️‍🔥 Пегий Дудочник </div>
+  <div class="topbar"> <b>С ❤️‍🔥 Пегий Дудочник</b></div>
   <div class="bottombar" id="hide">
     <center>
       <div class="slider" id="well">
         <div class="sliderbox" id="slider">
           <div class="arrow">></div>
-        </div> <span>&nbsp; Slide to unlock </span>
+        </div> <span>&nbsp; </b> Slide to unlock </b> </span>
       </div>
     </center>
 
