--- a/installation/apps.html
+++ b/installation/apps.html
@@ -20,6 +20,7 @@
 <meta name="msapplication-TileColor" content="#000000">
 <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
 <meta name="theme-color" content="#000000">
+<meta name="description" content="На экран домой или установить приложение, для получения веб приложения...">
 
   <script type="text/javascript" src="//counter.websiteout.net/js/36/0/1988/0"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
