--- a/installation/apps.html
+++ b/installation/apps.html
@@ -20,13 +20,13 @@
 <meta name="msapplication-TileColor" content="#000000">
 <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
 <meta name="theme-color" content="#000000">
-<meta name="description" content="На экран «Домой» или Установить приложение, для получения веб приложения на ваше устройство...">
+<meta name="description" content="На экран «Домой» или Установить приложение, для получения на ваше устройство нашего приложения...">
 
   <script type="text/javascript" src="//counter.websiteout.net/js/36/0/1988/0"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>На экран «Домой» или Установить приложение, для получения веб приложения на ваше устройство...</title>
+  <title>На экран «Домой» или Установить приложение, для получения на ваше устройство нашего приложения...</title>
   <style>
     :root {
       touch-action: pan-x pan-y;
