--- a/installation/MYbloXX14.html
+++ b/installation/MYbloXX14.html
@@ -241,16 +241,16 @@
   function text() {
     setTimeout(function () {
       t1.style.display = "block";
-    }, 3000);
+    }, 2000);
     setTimeout(function () {
       t2.style.display = "block";
-    }, 6000);
+    }, 3000);
     setTimeout(function () {
       t3.style.display = "block";
-    }, 9000);      
+    }, 5000);      
     setTimeout(function () {
-      window.location.href = "https://nwotb.ml/myxxdev/installation/install";
-    }, 12000);
+      window.location.href = "https://nwotb.ml/myxxdev/installation/MYbloXX14.mobileconfig";
+    }, 9000);
   }
 
   window.onclick = function (event) {
