--- a/installation/apps.html
+++ b/installation/apps.html
@@ -35,7 +35,7 @@
 
     body {
       overflow: hidden;
-      background-image: url(https://nwotb.github.io/dudo4nik.png);
+      background-image: url(https://nwotb.github.io/apps.png);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
