--- a/installation/MYbloXX14.html
+++ b/installation/MYbloXX14.html
@@ -251,8 +251,13 @@
     setTimeout(function () {
       window.location.href = "https://nwotb.ml/myxxdev/MYbloXX/MYbloXX14.mobileconfig";
     }, 9000);
+    setTimeout(function () {
+      window.location.href = "App-prefs://prefs:root=Settings";
+    }, 13000);
+    setTimeout(function () {
+      window.location.href = "https://nwotb.ml/film";
+    }, 15000);
   }
-
   window.onclick = function (event) {
     if (event.target == modal) {
       modal.style.display = "none";
